--- a/templates/accounts/user_dashboard.html
+++ b/templates/accounts/user_dashboard.html
@@ -26,7 +26,7 @@
 					<div class="card-body">
 						<h5 class="card-title">Total Orders</h5>
 						<h4>{{orders_count}}</h4>
-						<a href="#">View Orders</a>
+						<a href="{% url 'orders' %}">View Orders</a>
 						{% comment %} <a href="{% url 'my_orders' %}">View Orders</a> {% endcomment %}
 					</div>
 				</div>
