--- a/templates/admin/coupon_list.html
+++ b/templates/admin/coupon_list.html
@@ -127,7 +127,7 @@
                                     </li>
                                 {% endif %}
                             </ul>
-                        </div>
+                        </div> <!-- .paginator -->
 
 
 
