--- a/templates/includes/user_dashboard_navbar.html
+++ b/templates/includes/user_dashboard_navbar.html
@@ -168,7 +168,7 @@
           <li class="list-group-item menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-briefcase"></i> MY STUFF</a>
             <ul class="sub-menu children dropdown-menu">
-                <li><a href="" class="list-group-item" >  My Coupons</a></li>
+                <li><a href="{% url 'coupons' %}" class="list-group-item" >  My Coupons</a></li>
                 <li></i><a href="{% url 'wishlist' %}" class="list-group-item" >  My Wishlist</a></li>
             </ul>
           </li>
