--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -116,7 +116,7 @@
                       <span class="text-muted">Size : {{ item.product.size }}</span><br>
                       <span class="text-muted">Colour : {{ item.product.color }}</span><br>
                       <span class="text-muted">Quantity : {{ item.quantity }}</span><br>
-                      <span class="text-muted">Price : ₹ {{ item.product.product.price }}</span>
+                      <span class="text-muted">Price : ₹ {{ item.subtotal }}</span>
                       </small>
                     </figcaption>
                   </figure>
