--- a/templates/accounts/user_coupons.html
+++ b/templates/accounts/user_coupons.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% comment %} <section class="section-conten padding-y bg"> {% endcomment %}
-<main class="col-md-9">
+<main class="col-md-9 ">
 	
         <!-- Content for the main section goes here -->
         <!-- You can add your content here -->
@@ -16,43 +16,60 @@
 			<main class="col-md-9">
 			  <article class="card">
                 <div class="card-body">
-						<strong class="card-title" >Manage Address</strong>
+						<strong class="card-title" >My Coupons</strong>
 						{% include 'includes/alerts.html' %}
 							<div style="margin-top: 20px; ">
-								<div class="card" style=" margin-bottom: 20px;">
-									<div class="card-header" >
-										<a class="" href="{% url 'add_address' %}"><i class="fa fa-plus"></i> ADD A NEW ADDRESS</a>
-										
-									</div>
-								</div>
-
-								{% for address in adrs %}
+								
+								{% for coup in page_obj %}
 								<div class="card" style="position: relative;">
 									<div class="card-header">
-										<strong class="card-title">{{address.name}} <small>{{address.phone}}</small></strong>
-										<div>
-											<small>{{address.housename}}, {{address.locality}}, {{address.city}}, {{address.state}}-{{address.zipcode}}</small>
-										</div>
-										<div class="dropdown" style="position: absolute; top: 5px; right: 10px;">
-												<i  aria-hidden="true" class="fa fa-ellipsis-v btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-											<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-												<a class="dropdown-item" href="{% url 'edit_address' id=address.id %}">Edit</a>
-												<a class="dropdown-item" href="{% url 'delete_address' %}?aid={{ address }}">Delete</a>
-											</div>
-										</div>
+                                       <div class="d-flex justify-content-between align-items-center">
+                                        <div style="width:30%;">
+										    <strong class="card-title">{{coup.coupon}} </strong>
+                                            <div >
+                                                {% if coup.applied %}<small>Applied</small>{% else %}<small>Not Applied</small>{% endif %}
+                                            </div>
+                                        </div>
+                                        <div style="width:50%;">
+                                            <small>  {{coup.coupon.description}}</small>
+                                        </div style="width:30%;" >
+										    {% if coup.coupon.is_active %}<small>  Available</small>{% else %}<small>  Not Available</small>{% endif %}
+                                            {% comment %} {% if coup.applied %}<small>Applied</small>{% else %}<small>Not Applied</small>{% endif %} {% endcomment %}
+                                      </div>
 									</div>
 								</div>
 								{% endfor %}
-									
 							</div>
-
                 </div> <!-- card-body .// -->
+                <nav class="mt-4" aria-label="Page navigation sample">
+                    {% if page_obj.has_other_pages %}
+                        <ul class="pagination">
+                            {% if page_obj.has_previous %}
+                                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+                            {% else %}
+                                <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+                            {% endif %}
+                
+                            {% for i in page_obj.paginator.page_range %}
+                                {% if page_obj.number == i %}
+                                    <li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
+                                {% else %}
+                                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                {% endif %}
+                            {% endfor %}
+                
+                            {% if page_obj.has_next %}
+                                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+                            {% else %}
+                                <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+                            {% endif %}
+                        </ul>
+                    {% endif %}
+                </nav>
 			  </article> <!-- order-group.// -->
 			</main>
 		  </div> <!-- row.// -->
 		</div>
-
-
 </section>
 </main>
 
