--- a/templates/includes/user_dashboard_navbar.html
+++ b/templates/includes/user_dashboard_navbar.html
@@ -158,13 +158,13 @@
                 <li></i><a href="{% url 'user_manage_address' %}" class="list-group-item" >  Manage Addresses</a></li>
             </ul>
           </li>
-          <li class="list-group-item menu-item-has-children dropdown">
+          {% comment %} <li class="list-group-item menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-wallet"></i> PAYMENTS</a>
             <ul class="sub-menu children dropdown-menu">
                 <li><a href="" class="list-group-item" >  Saved UPI</a></li>
                 <li></i><a href="" class="list-group-item" >  Saved Cards</a></li>
             </ul>
-          </li>
+          </li> {% endcomment %}
           <li class="list-group-item menu-item-has-children dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="fa fa-briefcase"></i> MY STUFF</a>
             <ul class="sub-menu children dropdown-menu">
@@ -174,9 +174,10 @@
           </li>
         </ul>
         <br>
-        <a class="btn btn-light btn-block" href="{% url 'user_logout' %}"> <i class="fa fa-power-off"></i> <span class="text">Log out</span> </a>
+        <a class="btn btn-primary btn-block" href="{% url 'user_logout' %}"> <i class="fa fa-power-off"></i> <span class="text">Log out</span> </a>
         <!--   SIDEBAR .//END   -->
       </aside>
+      <br>
 
 {% comment %} <main class="col-md-9">
         <!-- Content for the main section goes here -->
