forgot password for loged in user

--- a/templates/accounts/forgot_password.html
+++ b/templates/accounts/forgot_password.html
@@ -1,57 +1,46 @@
-{% extends 'base.html' %}
+  {% extends 'user_dashboard_base.html' %}
+
 
 {% block content %}
 
-<section class="section-conten padding-y" style="min-height:84vh">
+{% comment %} <section class="section-conten padding-y bg"> {% endcomment %}
+<main class="col-md-9">
+	
+        <!-- Content for the main section goes here -->
+        <!-- You can add your content here -->
+		{% comment %} {% include 'includes/alerts.html' %} {% endcomment %}
+		<div class="container">
+		  <div class="row">
+			  <main class="col-md-9">
+			    <article class="card">
+                <div class="card-body">
+						            <strong class="card-title" >Forgot Password</strong>
+							                <div style="margin-top: 10px; ">
+                                <div class="card-body">
+                                    {% comment %} <h4 class="card-title mb-4">Change Password</h4> {% endcomment %}
+                                    {% include 'includes/alerts.html' %}
+                                    <form action="{% url 'forgot_password' %}" method="POST">
+                                      {% csrf_token %}
+                                      <div class="form-group">
+                                        <input type="email" class="form-control" placeholder="Enter Your Email Address" name="email" required>
+                                     </div> 
+                                        <div class="form-group float-right">
+                                            <button type="submit" class="btn btn-primary btn-md" style="max-width:200px;"> Submit  </button>
+                                        </div> <!-- form-group// -->
+                                    </form>
+                                    </div> <!-- card-body.// -->
+                                </div>
+							                </div>
+                </div> <!-- card-body .// -->
+			    </article> <!-- order-group.// -->
+			  </main>
+		  </div> <!-- row.// -->
+		</div>
+{% comment %} </section> {% endcomment %}
+</main>
+</div> <!-- row.// -->
+</div> <!-- container.// -->
+</body>
+</html>
 
-<!-- ============================ COMPONENT LOGIN   ================================= -->
-
-{% comment %} {% if request.GET.command == 'verification' %}
-
-<div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
-Thank you for registering with us. We have sent you a verification email to your email address [{{ request.GET.email }}]
-<br><br>
-Already verified? <a href="{% url 'login' %}">Login</a>
-</div>
-
-{% else %} {% endcomment %}
-
-	<div class="card mx-auto" style="max-width: 600px; margin-top:100px;">
-
-      <div class="card-body">
-      <h4 class="card-title mb-4">Forgot Password</h4>
-      {% include 'includes/alerts.html' %}
-      <form action="{% url 'forgot_password' %}" method="POST">
-        {% csrf_token %}
-          <div class="form-group">
-            {% comment %} <label for="user_password">Email Address</label> {% endcomment %}
-						{% comment %} {{ form.user_email }} {% endcomment %}
-            <input type="email" class="form-control" placeholder="Email Address" name="email" >
-          </div> <!-- form-group// -->
-          {% comment %} <div class="form-group">
-            <label for="user_password">{{ form.user_password.label }}</label>
-						{{ form.user_password }}
-          </div> <!-- form-group// --> {% endcomment %}
-
-          <div class="form-group">
-          	<a href="{% url 'user_login' %}" class="float-right">Got password? Login</a>
-          </div> <!-- form-group form-check .// -->
-
-          <div class="form-group text-center ">
-              <button type="submit" class="btn btn-primary btn-block" style="max-width: 200px;">Submit</button>
-          </div> <!-- form-group// -->
-          
-          {% comment %} <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block">Submit</button>
-          </div> <!-- form-group// --> {% endcomment %}
-      </form>
-      </div> <!-- card-body.// -->
-    </div> <!-- card .// -->
-
-     <p class="text-center mt-4">Don't have an account? <a href="{% url 'user_signup' %}">Sign up</a></p>
-     <br><br>
-<!-- ============================ COMPONENT LOGIN  END.// ================================= -->
-{% comment %} {% endif %} {% endcomment %}
-
-</section>
 {% endblock %}
