--- a/templates/accounts/user_change_password.html
+++ b/templates/accounts/user_change_password.html
@@ -36,7 +36,13 @@
 
 					<input type="submit" value="Submit" class="btn btn-primary">
 					
+					
 				</form>
+				{% comment %} <div class="form-group "> {% endcomment %}
+					<a href="{% url 'otp_login' %}" class="float-right">Forgot password?</a>
+	  
+				{% comment %} </div> <!-- form-group form-check .// --> {% endcomment %}
+				
 			</div>
 
 			</div> <!-- row.// -->
