--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 
 	
 <div class="row">
-	{% for i in page_obj %}
+	{% for i in popular_pdt %}
 
 	<div class="col-md-3">
 		<div href="#" class="card card-product-grid">
@@ -133,7 +133,7 @@
 </header><!-- sect-heading -->
 
 <div class="row">
-	{% for i in page_obj %}
+	{% for i in new_arivals %}
 
 	<div class="col-md-3">
 		<div href="#" class="card card-product-grid">
@@ -259,7 +259,7 @@
 </header><!-- sect-heading -->
 
 <div class="row">
-	{% for i in page_obj %}
+	{% for i in recommended %}
 
 	<div class="col-md-3">
 		<div href="#" class="card card-product-grid">
