--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -17,32 +17,8 @@
 			  <article class="card">
                 <div class="card-body">
 						<strong class="card-title" >Change Password</strong>
-						{% comment %} {% include 'includes/alerts.html' %} {% endcomment %}
 							<div style="margin-top: 10px; ">
-								{% comment %} <div class="card" style=" margin-bottom: 20px;">
-									<div class="card-header" >
-										<a class="" href="{% url 'add_address' %}"><i class="fa fa-plus"></i> ADD A NEW ADDRESS</a>
-										
-									</div>
-								</div>
-
-								{% for address in adrs %}
-								<div class="card" style="position: relative;">
-									<div class="card-header">
-										<strong class="card-title">{{address.name}} <small>{{address.phone}}</small></strong>
-										<div>
-											<small>{{address.housename}}, {{address.locality}}, {{address.city}}, {{address.state}}-{{address.zipcode}}</small>
-										</div>
-										<div class="dropdown" style="position: absolute; top: 5px; right: 10px;">
-												<i  aria-hidden="true" class="fa fa-ellipsis-v btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></i>
-											<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-												<a class="dropdown-item" href="{% url 'edit_address' id=address.id %}">Edit</a>
-												<a class="dropdown-item" href="{% url 'delete_address' %}?aid={{ address }}">Delete</a>
-											</div>
-										</div>
-									</div>
-								</div>
-								{% endfor %} {% endcomment %}
+								
                                 <div class="card-body">
                                     {% comment %} <h4 class="card-title mb-4">Change Password</h4> {% endcomment %}
                                     {% include 'includes/alerts.html' %}
@@ -59,9 +35,13 @@
                                         </div> <!-- form-group// -->
                               
                               
-                                        <div class="form-group">
-                                            <button type="submit" class="btn btn-primary btn-block "> Submit  </button>
+                                        <div class="form-group float-right" >
+                                            <button type="submit" class="btn btn-primary btn-md " > Submit  </button>
                                         </div> <!-- form-group// -->
+										<div class="form-group float-left">
+											<a href="{% url 'forgot_password' %}" class="" >Forgot password?</a>
+							  
+										</div> <!-- form-group form-check .// -->
                                     </form>
                                     </div> <!-- card-body.// -->
                                   </div>
