--- a/templates/accounts/user_login.html
+++ b/templates/accounts/user_login.html
@@ -34,7 +34,7 @@ Already verified? <a href="{% url 'login' %}">Login</a>
           </div> <!-- form-group// -->
 
           <div class="form-group ">
-          	<a href="{% url 'otp_login' %}" class="float-right">Forgot password?</a>
+          	<a href="{% url 'forgot_password' %}" class="float-right">Forgot password?</a>
 
           </div> <!-- form-group form-check .// -->
           <div class="form-group form-group">
