--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -133,11 +133,13 @@
 
 
     {% comment %} <main class="col-lg-8"> {% endcomment %}
-    <article class="filter-group">
+   
+  <article class="filter-group">
       
     <div class="filter-content " id="collapse_4">
       <div class="card-body">
-        
+        {% if selected_adrs %}
+      
         <article class="accordion" id="accordion_pay">
           
           <div class="card">
@@ -152,7 +154,7 @@
             </header>
             <div id="pay_paypal" class="collapse show" data-parent="#accordion_pay">
             <div class="card-body">
-              <p class="text-center text-muted">Connect your PayPal account and use it to pay your bills. You'll be redirected to PayPal to add your billing information.</p>
+              {% comment %} <p class="text-center text-muted">Connect your PayPal account and use it to pay your bills. You'll be redirected to PayPal to add your billing information.</p> {% endcomment %}
               <p class="text-center">
                 <a href="#"><img src="{% static './images/misc/btn-paypal.png' %}" height="32"></a>
                 <br><br>
@@ -170,29 +172,33 @@
                 </label>
 
               </header>
+
               <div id="pay_razorpay" class="collapse" data-parent="#accordion_pay">
-              <div class="card-body d-flex justify-content-center">
-                <p class="text-center text-muted ">
-                <p class="text-center col-md-6">
-                  <small>Click here for continue with razorpay</small>
+                <div class="card-body d-flex justify-content-center">
+                  <form action="{% url 'razorpay' %}" class="form-inline" method="post" >
+                    {% csrf_token %}  
+                    <p class="text-center text-muted ">
+                    {% comment %} <p class="text-center "> {% endcomment %}
+                      <small>Click here for continue with razorpay</small>
+                    
 
                   {% comment %} <a href="#"><img src="{% static './images/misc/btn-paypal.png' %}" height="32"></a> {% endcomment %}
-                    <button id="rzp-button1" type="submit" class="btn btn-secondary btn-md py-3 btn-block l-f-o__create-link btn--e-transparent-brand-b-2" style="border: 2px solid #555555" href="">Razorpay</button>
-                    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+                      <button id="rzp-button1" type="submit" class="btn btn-secondary btn-md py-3 btn-block l-f-o__create-link btn--e-transparent-brand-b-2" style="border: 2px solid #555555;" href="">Razorpay</button>
+                        <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
                     <script>
                       var options = {
-                          "key": "rzp_test_fN7V6HjR7GcOGl", // Enter the Key ID generated from the Dashboard
-                          "amount": "100", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+                          "key": "rzp_test_FzpBcunlDun1vW", // Enter the Key ID generated from the Dashboard
+                          "amount": "{{ total }}"*100, // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
                           "currency": "INR",
                           "name": "Celeritas Corp", //your business name
                           "description": "Test Transaction",
-                          "image": "https://example.com/your_logo",
-                          "order_id": "{{payment.id}}", //     "callback_url": "" https://eneqd3r9zrjok.x.pipedream.net/     This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+                          "image": "{% static 'images/LOGO-1.jpg' %}",
+                          "order_id": "{{ payment.id }}", //     "callback_url": "" https://eneqd3r9zrjok.x.pipedream.net/     This is a sample Order ID. Pass the `id` obtained in the response of Step 1
                           "callback_url": "https://eneqd3r9zrjok.x.pipedream.net/",
                           "prefill": {
-                              "name": "Ajsal S", //your customer's name
-                              "email": "ajsal@gmail.com",
-                              "contact": "9000090000"
+                              "name": '{{user.user_firstname}} {{user.user_lastname}}', //your customer's name
+                              "email": '{{user.user_email}}',
+                              "contact": '{{user.user_phone}}'
                           },
                           "notes": {
                               "address": "Razorpay Corporate Office"
@@ -202,7 +208,7 @@
                           },
                           "handler": function(response) {
                               // Redirect the user to another page after payment success
-                              window.location.href = "{% url 'orderconfirm' %}";
+                              window.location.href = "{% url 'razorpay' %}";
                           }
                       };
                       var rzp1 = new Razorpay(options);
@@ -211,9 +217,11 @@
                           e.preventDefault();
                       }
                       
-                      </script>?
+                      </script>
                   <br>
                 </p>
+                {% comment %} </p> {% endcomment %}
+              </form>
               </div> <!-- card body .// -->
               </div> <!-- collapse .// -->
             </div> <!-- card.// -->
@@ -245,7 +253,12 @@
       </div><!-- card-body.// -->
 
     </div>
+    {% else %}
+    <small>Please select an address for continue payment</small>
+  {% endif %}
   </article><!-- filter-group  .// --> 
+  
+  
 
 {% comment %} </main> <!-- col.// --> {% endcomment %}
 
