--- a/templates/admin/color_list.html
+++ b/templates/admin/color_list.html
@@ -58,13 +58,13 @@
                         </div>
                     </div>
                     
-                    <div class="card-body">
+                    <div class="card-body ">
                         <table id="bootstrap-data-table" class="table table-striped table-bordered">
                             <thead>
                                 <tr>
                                     <th>ID</th>
                                     <th>Colour</th>
-                                    {% comment %} <th>Applied</th> {% endcomment %}
+                                    <th>Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
