--- a/templates/admin/coupon_list.html
+++ b/templates/admin/coupon_list.html
@@ -69,6 +69,8 @@
                                     <th>Minimum Amount</th>
                                     <th>Description</th>
                                     <th>Is Active</th>
+                                    <th>Actions</th>
+
                                     {% comment %} <th>Applied</th> {% endcomment %}
                                 </tr>
                             </thead>
