--- a/templates/admin/size_list.html
+++ b/templates/admin/size_list.html
@@ -64,6 +64,8 @@
                                 <tr>
                                     <th>ID</th>
                                     <th>Size</th>
+                                    <th>Actions</th>
+
                                     {% comment %} <th>Applied</th> {% endcomment %}
                                 </tr>
                             </thead>
