--- a/templates/includes/admin_navbar.html
+++ b/templates/includes/admin_navbar.html
@@ -7,7 +7,7 @@
                   <li class="">
                       <a href="{% url 'admin_dashboard' %}"><i class="menu-icon fa fa-laptop"></i>Dashboard </a>
                   </li>
-                  <li class="menu-title">UI elements</li><!-- /.menu-title -->
+                  <li class="menu-title">Celeritas elements</li><!-- /.menu-title -->
 
                   <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-image"></i>Banner</a>
@@ -71,15 +71,15 @@
 
 
 
-                  <li class="menu-title">Extras</li><!-- /.menu-title -->
+                  {% comment %} <li class="menu-title">Extras</li><!-- /.menu-title -->
                   <li class="menu-item-has-children dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Edit</a>
                       <ul class="sub-menu children dropdown-menu">
                           <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>
-                          {% comment %} <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li> {% endcomment %}
+                          <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li>
                           <li><i class="menu-icon fa fa-paper-plane"></i><a href="pages-forget.html">Forget Password</a></li>
                       </ul>
-                  </li>
+                  </li> {% endcomment %}
               </ul>
           </div><!-- /.navbar-collapse -->
       </nav>
