--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 			<figcaption class="info-wrap">
 				<a href="{{ i.get_url }}" class="title">{{i.product_name}}</a>
 				
-				<div class="rating-wrap">
+				{% comment %} <div class="rating-wrap">
 					<ul class="rating-stars">
 						<li style="width:80%" class="stars-active"> 
 							<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
@@ -74,7 +74,7 @@
 						</li>
 					</ul>
 					<span class="label-rating text-muted"> 34 reviws</span>
-				</div>
+				</div> {% endcomment %}
 				<div class="price mt-1">
 					{% if i.category.offer_active %}
                     <p class="font-weight-bold">Price: <s>₹ {{i.normal_price}}</s></p>
@@ -143,7 +143,7 @@
 			<figcaption class="info-wrap">
 				<a href="{{ i.get_url }}" class="title">{{i.product_name}}</a>
 				
-				<div class="rating-wrap">
+				{% comment %} <div class="rating-wrap">
 					<ul class="rating-stars">
 						<li style="width:80%" class="stars-active"> 
 							<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
@@ -153,7 +153,7 @@
 						</li>
 					</ul>
 					<span class="label-rating text-muted"> 34 reviws</span>
-				</div>
+				</div> {% endcomment %}
 				<div class="price mt-1">
 					{% if i.category.offer_active %}
                     <p class="font-weight-bold">Price: <s>₹ {{i.normal_price}}</s></p>
@@ -168,33 +168,7 @@
 	{% endfor %}
 	
 </div> <!-- row.// -->
-{% comment %} <div class="row" data-aos="fade-up">
-              
-	<div class="col-md-12 text-center">
-	  <div class="site-block-27">
-		<ul>
 
-		  {% if page_obj.has_previous %}
-		  
-	
-		  <li><a href="?page={{ page_obj.previous_page_number }}">&lt;</a></li>
-		  {% endif %}
-
-		  <li class="active"><span>{{ page_obj.number }}</span></li>
-		  {% if page_obj.has_next %}
-		  <li><a href="?page={{ page_obj.next_page_number }}">&gt;</a></li>
-		  
-		  <!--
-		  <li><a href="?page={{ page_obj.paginator.num_pages }}">last</a></li>
-		  -->
-		  
-		  {% endif %}
-
-		</ul>
-	  </div>
-	</div>
-
-</div> {% endcomment %}
 
 
 </div> <!-- container .//  -->
@@ -268,19 +242,6 @@
 
 			<figcaption class="info-wrap">
 				<a href="{{ i.get_url }}" class="title">{{i.product_name}}</a>
-
-				<div class="rating-wrap">
-					<ul class="rating-stars">
-						<li style="width:80%" class="stars-active"> 
-							<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						</li>
-						<li>
-							<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 
-						</li>
-					</ul>
-					<span class="label-rating text-muted"> 34 reviws</span>
-				</div>
-
 				<div class="price mt-1">
 					{% if i.category.offer_active %}
                     <p class="font-weight-bold">Price: <s>₹ {{i.normal_price}}</s></p>
@@ -408,6 +369,7 @@
 	
 	<a href="#"><img src="{% static 'images/misc/appstore.png' %}" height="40"></a>
 	<a href="#"><img src="{% static 'images/misc/appstore.png' %}" height="40"></a>
+
 	
 	</div><!-- container // -->
 	</section>
