--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,6 @@
 
 
 <!-- ========================= SECTION INTRO ========================= -->
-<!-- ========================= SECTION INTRO ========================= -->
 <section class="section-intro padding-y-sm">
 	<div class="container">
 
@@ -39,8 +38,6 @@
 </section>
 <!-- ========================= SECTION INTRO END// ========================= -->
 
-<!-- ========================= SECTION INTRO END// ========================= -->
-
 
 
 
@@ -51,19 +48,22 @@
 <header class="section-heading">
 	<h3 class="section-title">Popular products</h3>
 </header><!-- sect-heading -->
-
 	
 <div class="row">
 	{% for i in popular_pdt %}
 
 	<div class="col-md-3">
-		<div href="#" class="card card-product-grid">
-			{% comment %} <a href="#" class="img-wrap"> <img src="{% static 'images/items/5.jpg' %}"> </a> {% endcomment %}
-			<a href="{{ i.get_url }}" class="img-wrap"> <img src="{{i.image.url}}" alt="Image placeholder"> </a>
+		<div href="{% url 'product_detail' id=i.product.id %}" class="card card-product-grid">
+			<a href="{% url 'product_detail' id=i.product.id %}" class="img-wrap"> <img src="{{i.product.image.url}}" alt="Image placeholder"> </a>
 
 			<figcaption class="info-wrap">
-				<a href="{{ i.get_url }}" class="title">{{i.product_name}}</a>
-				
+				<a href="{{ i.get_url }}" class="title">{{i.product.product_name}}</a>
+				<small>( {{i.product.category}}<br>Colour: {{i.color}}, Size: {{i.size}} )</small>
+
+				{% comment %} <div class="fix-height"style="height: 50%; overflow: auto;">
+					<a href="{% url 'product_detail' id=product.id %}" class="title">{{product.product.product_name}}</a>
+					<small>( {{i.product.category}}<br>Colour: {{i.color}}, Size: {{i.size}} )</small> {% endcomment %}
+
 				{% comment %} <div class="rating-wrap">
 					<ul class="rating-stars">
 						<li style="width:80%" class="stars-active"> 
@@ -75,47 +75,27 @@
 					</ul>
 					<span class="label-rating text-muted"> 34 reviws</span>
 				</div> {% endcomment %}
+
 				<div class="price mt-1">
-					{% if i.category.offer_active %}
-                    <p class="font-weight-bold">Price: <s>₹ {{i.normal_price}}</s></p>
-                    <p class="text-primary font-weight-bold">Offer Price ₹ {{i.price}}</p>
+					{% if i.product.category.offer_active %}
+                    <p class="font-weight-bold">Price: <s>₹ {{i.product.normal_price}}</s></p>
+                    <p class="text-primary font-weight-bold">Offer Price ₹ {{i.product.price}}</p>
                     {% else %}
-                    <p class="text-primary font-weight-bold"><h3> ₹ {{i.price}}</h3></p>
+                    <p class="text-primary font-weight-bold"><h3> ₹ {{i.product.price}}</h3></p>
                     {% endif %}
 				</div> <!-- price-wrap.// -->
+				{% comment %} <div>
+                    <p class="product_description">{{i.description}}</p>
+				</div> {% endcomment %}
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	{% endfor %}
 	
 </div> <!-- row.// -->
-{% comment %} <div class="row" data-aos="fade-up">
-              
-	<div class="col-md-12 text-center">
-	  <div class="site-block-27">
-		<ul>
 
-		  {% if page_obj.has_previous %}
-		  
-	
-		  <li><a href="?page={{ page_obj.previous_page_number }}">&lt;</a></li>
-		  {% endif %}
 
-		  <li class="active"><span>{{ page_obj.number }}</span></li>
-		  {% if page_obj.has_next %}
-		  <li><a href="?page={{ page_obj.next_page_number }}">&gt;</a></li>
-		  
-		  <!--
-		  <li><a href="?page={{ page_obj.paginator.num_pages }}">last</a></li>
-		  -->
-		  
-		  {% endif %}
-
-		</ul>
-	  </div>
-	</div>
-
-</div> {% endcomment %}
+</div>
 </div> <!-- container .//  -->
 
 
@@ -136,39 +116,34 @@
 	{% for i in new_arivals %}
 
 	<div class="col-md-3">
-		<div href="#" class="card card-product-grid">
-			{% comment %} <a href="#" class="img-wrap"> <img src="{% static 'images/items/5.jpg' %}"> </a> {% endcomment %}
-			<a href="{{ i.get_url }}" class="img-wrap"> <img src="{{i.image.url}}" alt="Image placeholder"> </a>
+		<div href="{% url 'product_detail' id=i.product.id %}" class="card card-product-grid">
+			<a href="{% url 'product_detail' id=i.product.id %}" class="img-wrap"> <img src="{{i.product.image.url}}" alt="Image placeholder"> </a>
 
 			<figcaption class="info-wrap">
-				<a href="{{ i.get_url }}" class="title">{{i.product_name}}</a>
-				
-				{% comment %} <div class="rating-wrap">
-					<ul class="rating-stars">
-						<li style="width:80%" class="stars-active"> 
-							<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
-						</li>
-						<li>
-							<i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> 
-						</li>
-					</ul>
-					<span class="label-rating text-muted"> 34 reviws</span>
-				</div> {% endcomment %}
+				<a href="{{ i.get_url }}" class="title">{{i.product.product_name}}</a>
+				<small>( {{i.product.category}}<br>Colour: {{i.color}}, Size: {{i.size}} )</small>
+
+				{% comment %} <div class="fix-height"style="height: 50%; overflow: auto;">
+					<a href="{% url 'product_detail' id=product.id %}" class="title">{{product.product.product_name}}</a>
+					<small>( {{i.product.category}}<br>Colour: {{i.color}}, Size: {{i.size}} )</small> {% endcomment %}
+
 				<div class="price mt-1">
-					{% if i.category.offer_active %}
-                    <p class="font-weight-bold">Price: <s>₹ {{i.normal_price}}</s></p>
-                    <p class="text-primary font-weight-bold">Offer Price ₹ {{i.price}}</p>
+					{% if i.product.category.offer_active %}
+                    <p class="font-weight-bold">Price: <s>₹ {{i.product.normal_price}}</s></p>
+                    <p class="text-primary font-weight-bold">Offer Price ₹ {{i.product.price}}</p>
                     {% else %}
-                    <p class="text-primary font-weight-bold"><h3> ₹ {{i.price}}</h3></p>
+                    <p class="text-primary font-weight-bold"><h3> ₹ {{i.product.price}}</h3></p>
                     {% endif %}
 				</div> <!-- price-wrap.// -->
+				{% comment %} <div>
+                    <p class="product_description">{{i.description}}</p>
+				</div> {% endcomment %}
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	{% endfor %}
 	
 </div> <!-- row.// -->
-
 
 
 </div> <!-- container .//  -->
@@ -228,7 +203,7 @@
 <div class="container">
 
 <header class="section-heading">
-	<a href="#" class="btn btn-outline-primary float-right">See all</a>
+	<a href="{% url 'user_store' %}" class="btn btn-outline-primary float-right">See all</a>
 	<h3 class="section-title">Recommended</h3>
 </header><!-- sect-heading -->
 
@@ -236,36 +211,38 @@
 	{% for i in recommended %}
 
 	<div class="col-md-3">
-		<div href="#" class="card card-product-grid">
-			{% comment %} <a href="#" class="img-wrap"> <img src="{% static 'images/items/1.jpg' %}"> </a> {% endcomment %}
-			<a href="{{ i.get_url }}" class="img-wrap"> <img src="{{i.image.url}}" alt="Image placeholder"> </a>
+		<div href="{% url 'product_detail' id=i.product.id %}" class="card card-product-grid">
+			<a href="{% url 'product_detail' id=i.product.id %}" class="img-wrap"> <img src="{{i.product.image.url}}" alt="Image placeholder"> </a>
 
 			<figcaption class="info-wrap">
-				<a href="{{ i.get_url }}" class="title">{{i.product_name}}</a>
+				<a href="{{ i.get_url }}" class="title">{{i.product.product_name}}</a>
+				<small>( {{i.product.category}}<br>Colour: {{i.color}}, Size: {{i.size}} )</small>
+
 				<div class="price mt-1">
-					{% if i.category.offer_active %}
-                    <p class="font-weight-bold">Price: <s>₹ {{i.normal_price}}</s></p>
-                    <p class="text-primary font-weight-bold">Offer Price ₹ {{i.price}}</p>
+					{% if i.product.category.offer_active %}
+                    <p class="font-weight-bold">Price: <s>₹ {{i.product.normal_price}}</s></p>
+                    <p class="text-primary font-weight-bold">Offer Price ₹ {{i.product.price}}</p>
                     {% else %}
-                    <p class="text-primary font-weight-bold"><h3> ₹ {{i.price}}</h3></p>
+                    <p class="text-primary font-weight-bold"><h3> ₹ {{i.product.price}}</h3></p>
                     {% endif %}
 				</div> <!-- price-wrap.// -->
 				{% comment %} <div>
                     <p class="product_description">{{i.description}}</p>
-					</div> {% endcomment %}
+				</div> {% endcomment %}
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	{% endfor %}
 	
 </div> <!-- row.// -->
-<div class="row" data-aos="fade-up">
+<!-- ... -->
+{% comment %} <div class="row" data-aos="fade-up">
     <div class="col-md-12 text-center">
         <div class="site-block-27">
             <ul class="pagination">
 
-        {% if page_obj.has_other_pages %}
-	  		<ul class="pagination">
+    {% if page_obj.has_other_pages %}
+	  	<ul class="pagination">
 		{% if page_obj.has_previous %}
 	    	<li class="page-item"><a class="page-link" href="?page={{page_obj.previous_page_number}}">Previous</a></li>
 		{% else %}
@@ -274,7 +251,7 @@
 
 		{% for i in page_obj.paginator.page_range %}
 			{% if page_obj.number == i %}
-	    		<li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
+				<li class="page-item active"><a class="page-link" href="#">{{i}}</a></li>
 			{% else %}
 				<li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
 			{% endif %}
@@ -292,7 +269,9 @@
         </div>
     </div>
 </div>
-<!-- ... -->
+<!-- ... --> {% endcomment %}
+
+
 
 </div> <!-- container .//  -->
 </section>
@@ -309,42 +288,42 @@
 	<div class="col-md-2 col-6">
 		<figure class="box item-logo">
 			<a href="#"><img src="{% static 'images/items/NIKE.jpg' %}"></a>
-			<figcaption class="border-top pt-2">36 Products</figcaption>
+			<figcaption class="border-top pt-2">{{brand_prod}}</figcaption>
 		</figure> <!-- item-logo.// -->
 	</div> <!-- col.// -->
 
 	<div class="col-md-2 col-6">
 		<figure class="box item-logo">
 			<a href="#"><img src="{% static 'images/items/ADIDAS.jpg' %}"></a>
-			<figcaption class="border-top pt-2">36 Products</figcaption>
+			<figcaption class="border-top pt-2">{{brand_prod}}</figcaption>
 		</figure> <!-- item-logo.// -->
 	</div> <!-- col.// -->
 
 	<div class="col-md-2 col-6">
 		<figure class="box item-logo">
 			<a href="#"><img src="{% static 'images/items/SEGA.jpg' %}"></a>
-			<figcaption class="border-top pt-2">36 Products</figcaption>
+			<figcaption class="border-top pt-2">{{brand_prod}}</figcaption>
 		</figure> <!-- item-logo.// -->
 	</div> <!-- col.// -->
 
 	<div class="col-md-2 col-6">
 		<figure class="box item-logo">
 			<a href="#"><img src="{% static 'images/items/PUMA.jpg' %}"></a>
-			<figcaption class="border-top pt-2">36 Products</figcaption>
+			<figcaption class="border-top pt-2">{{brand_prod}}</figcaption>
 		</figure> <!-- item-logo.// -->
 	</div> <!-- col.// -->
 
 	<div class="col-md-2 col-6">
 		<figure class="box item-logo">
 			<a href="#"><img src="{% static 'images/items/SEGA.jpg' %}"></a>
-			<figcaption class="border-top pt-2">36 Products</figcaption>
+			<figcaption class="border-top pt-2">{{brand_prod}}</figcaption>
 		</figure> <!-- item-logo.// -->
 	</div> <!-- col.// -->
 
 	<div class="col-md-2 col-6">
 		<figure class="box item-logo">
 			<a href="#"><img src="{% static 'images/items/NIKE.jpg' %}"></a>
-			<figcaption class="border-top pt-2">36 Products</figcaption>
+			<figcaption class="border-top pt-2">{{brand_prod}}</figcaption>
 		</figure> <!-- item-logo.// -->
 	</div> <!-- col.// -->
 	
@@ -369,7 +348,6 @@
 	
 	<a href="#"><img src="{% static 'images/misc/appstore.png' %}" height="40"></a>
 	<a href="#"><img src="{% static 'images/misc/appstore.png' %}" height="40"></a>
-
 	
 	</div><!-- container // -->
 	</section>
